namespace java com.heepay.rpc.tpds.model

struct FileAdviceModel {
    1: string adviceUrl;
    2: string systemNo;
    3: string fileName;
    
}